deployment/kustomize/environments/prd/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fluentdemo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/server-alias: "demo.djangofluent.org demo.djangofluent.com demo.django-fluent.com"
spec:
  tls:
    - secretName: fluentdemo-tls-prd
      hosts:
        - demo.django-fluent.org
        - demo.django-fluent.com
  rules:
    - host: demo.django-fluent.org # rest is aliased
      http:
        paths:
          - path: /
            backend:
              serviceName: fluentdemo
              servicePort: http
---
# Leverage nginx-ingress cache for /media/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fluentdemo-media
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 404 1m;
      proxy_cache_use_stale error timeout updating http_404 http_500 http_502 http_503 http_504;
      proxy_cache_bypass $http_x_purge;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  rules:
    - host: demo.django-fluent.org
      http:
        paths:
          - path: /media/
            backend:
              serviceName: fluentdemo
              servicePort: http
---
# Leverage nginx-ingress cache for /static/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fluentdemo-static
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 404 1m;
      proxy_cache_use_stale error timeout updating http_404 http_500 http_502 http_503 http_504;
      proxy_cache_bypass $http_x_purge;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  rules:
    - host: demo.django-fluent.org
      http:
        paths:
          - path: /static/
            backend:
              serviceName: fluentdemo
              servicePort: http
